Closed Bug 1198202 Opened 9 years ago Closed 9 years ago

DXVA disables itself on nVidia GTX GPU

Categories

(Core :: Audio/Video: Playback, defect, P2)

43 Branch
x86_64
Windows 7
defect

Tracking

()

RESOLVED FIXED
mozilla43
Tracking Status
firefox40 --- unaffected
firefox41 --- unaffected
firefox42 --- unaffected
firefox43 --- fixed

People

(Reporter: lola_j22, Assigned: mattwoodrow)

References

(Blocks 1 open bug)

Details

Attachments

(2 files)

User Agent: Mozilla/5.0 (Windows NT 6.1; WOW64; x64; rv:40.0) Gecko/20100101 Firefox/40.0 Build ID: 20150824030206 Steps to reproduce: If I switch resolution on a YouTube video or seek it turns DXVA off in the browser, which leads to a noticeable stutter in framerate. I've found it's because the gfx.crashguard settings are too sensitive, so even though my card is easily able to handle 4K OR 1080p60fps videos via DXVA it's turned off until I reset the prefs. Actual results: Changed resolution from 360p to 1080p60 on YouTube. - DXVA disables itself, adds a "Too many dropped frames" message to about:support - Adds gfx.crash-guard preferences to about:config - Card does not use the video engine to drive video leading to excessive GPU usage and stuttering frames in fullscreen. Expected results: Changed resolution from 360p to 1080p60 on YouTube. - Video would not stutter in fullscreen and DXVA would not permanently disable itself
OS: Unspecified → Windows 7
Hardware: Unspecified → x86_64
Component: Untriaged → Audio/Video: Playback
Product: Firefox → Core
We've been working on this issue on nightly. Can you try it on nightly?
Priority: -- → P2
This still does not appear to work on Nightly. I reset all about:config gfx.crashguard prefs, restarted the browser with addons off, loaded this video https://www.youtube.com/watch?v=lfwjzNB--5k and then seeked with GPU-Z active. It first uses DXVA and plays fine with peak loads of 60% at 1080p60. On seek it burps and continues playing, then turns itself off. I then get the messages in about:support about dropped frames.
I now also see an additional message "[D2D1.1] 4CreateBitmap failure Size(17050,30) Code: 0x80070057 format 0" at "(#0) Error" under "Graphics" in about:support.
Matt, do you know why Slew's particular GPU might be failing the CreateBitmap self-test?
Flags: needinfo?(matt.woodrow)
I believe the CreateBitmap failure is unrelated to this issue. Trying to allocate a 17k wide texture is expected to fail, and is probably caused by web content doing weird things. Bug 1195864 might help with this (though I'm not confident). We might also just need to increase our threshold to give the card time to catch up after seeking/changing resolution.
Flags: needinfo?(matt.woodrow)
Blocks: 1201274
Assignee: nobody → matt.woodrow
Attachment #8656218 - Flags: review?(ajones)
Attachment #8656218 - Flags: review?(ajones) → review+
Status: UNCONFIRMED → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla43
Slew, thanks again for reporting this video problem. Let us know if tomorrow's Nightly build works better for you. :)
Hello, sorry for the delay I spent a long time testing and it appears to be fixed. Thanks for the quick fixing!
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: