Bug 1198202 - Increase hardware video decoding fallback threshold. r=ajones